AC_INIT([enigma2-plugin-extensions-dreamplex],[2.1.3])
AM_INIT_AUTOMAKE([foreign])

AC_PATH_PROG(MSGFMT, msgfmt, AC_MSG_ERROR(Could not find msgfmt))
AC_PATH_PROG(MSGINIT, msginit, AC_MSG_ERROR(Could not find msginit))
AC_PATH_PROG(MSGMERGE, msgmerge, AC_MSG_ERROR(Could not find msgmerge))
AC_PATH_PROG(MSGUNIQ, msguniq, AC_MSG_ERROR(Could not find msguniq))
AC_PATH_PROG(XGETTEXT, xgettext, AC_MSG_ERROR(Could not find xgettext))
AM_PATH_PYTHON

AC_CONFIG_FILES([
Makefile
meta/Makefile
po/Makefile
src/Makefile
src/skins/Makefile
src/skins/default/Makefile
src/skins/default/buttons/Makefile
src/skins/default/icons/Makefile
src/skins/default/images/Makefile
src/skins/default/picons/Makefile
src/skins/default_FHD/Makefile
src/skins/default_FHD/buttons/Makefile
src/skins/default_FHD/icons/Makefile
src/skins/default_FHD/images/Makefile
src/skins/default_FHD/picons/Makefile
])
AC_OUTPUT
